# iart-frontend

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  app.config.js  default.conf  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vue.config.js
frontend/: models.py  urls.py  views.py
frontend/static/css/: iart.css
frontend/static/js/: iart.js
frontend/templates/: base.html  index.html  list.html  new_index.html
iart/: settings.py  urls.py
public/: index.html
src/: App.vue  main.js
src/components/: CollectionList.vue  CollectionUpload.vue  DrawerFilter.vue  DrawerSettings.vue  FilterDrawer.vue  Footer.vue  Grid.vue  GridCluster.vue  GridItem.vue  GridRanked.vue  HelpButton.vue  History.vue  ItemModal.vue  Loader.vue  Main.vue  MessageModal.vue  ModalCluster.vue  ModalCollection.vue  ModalCollectionList.vue  ModalCollectionUpload.vue  ModalCookies.vue  ModalError.vue  ModalGrid.vue  ModalItem.vue  ModalLayout.vue  ModalNoResults.vue  ModalSearch.vue  ModalWeights.vue  ROISelector.vue  SearchBar.vue  SearchImage.vue  SettingsDrawer.vue  Umap.vue  Umap2D.vue  UserAccount.vue  UserLogin.vue  UserMenu.vue  UserRegister.vue  Weights.vue
src/iart_web/: __main__.py  manage.py  package.json  webpack.config.js
src/iart_web/frontend/: urls.py  (+3 more)
src/locales/: en.json
src/mixins/: index.js
src/plugins/: axios.js  helpers.js  vuetify.js
src/router/: index.js
src/store/: api.module.js  index.js  user.module.js
src/styles/: introjs.css
src/views/: About.vue  Home.vue  Imprint.vue  Legal.vue  NotFound.vue  Privacy.vue  Search.vue
(+17 files in other folders)
